Fix bug: 'Current News' not aligned in FireFox

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -103,7 +103,7 @@ md-button {
   }
 
   .nav-tabs {
-    width: 480px;
+    width: 500px;
     top: 90px;
     left: 300px;
   }
